--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
-title: Fútbol entre robots - UNPSJB - Sadosky
-description: Program.ar
+title: Fútbol entre robots
+description: Proyecto de la UNPSJB enmarcado en el programa Program.ar de la Fundación Sadosky
