--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-architect
 title: Fútbol entre robots
 description: Proyecto de la UNPSJB enmarcado en el programa Program.ar de la Fundación Sadosky
