--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-leap-day
 title: Proyecto
 description: Proyecto de la UNPSJB enmarcado en el programa Program.ar de la Fundación Sadosky
