--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
-title: Proyecto
+title: Futbol entre robots Múltiplo N6
 description: Proyecto de la UNPSJB enmarcado en el programa Program.ar de la Fundación Sadosky
